# easy-edgedb

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql
src/: lib.rs  main.rs
