[package]
name = "easy-edgedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
edgedb-derive = "0.5.1"
edgedb-protocol = "0.6.0"
edgedb-tokio = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
